--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "nx": "18.1.2",
     "prettier": "^3.2.5",
@@ -33,10 +34,17 @@
     "verdaccio": "^5.0.4"
   },
   "dependencies": {
+    "@xterm/addon-serialize": "^0.12.0",
+    "@xterm/xterm": "^5.4.0",
+    "consola": "^3.2.3",
+    "events": "^3.3.0",
+    "node-pty": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "semver": "^7.6.0",
-    "tslib": "^2.3.0"
+    "systeminformation": "^5.22.7",
+    "tslib": "^2.3.0",
+    "xterm-headless": "^5.3.0"
   },
   "nx": {
     "includedScripts": []
