--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@nx/eslint-plugin": "18.1.2",
     "@nx/jest": "18.2.1",
     "@nx/js": "18.2.1",
+    "@nx/node": "18.1.2",
     "@nx/react": "18.1.2",
     "@nx/workspace": "18.1.2",
     "@swc-node/register": "~1.8.0",
@@ -16,6 +17,9 @@
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@swc/jest": "0.2.20",
+    "@types/decompress": "^4.2.7",
+    "@types/fake-useragent": "^1.0.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@types/semver": "^7.5.8",
@@ -36,15 +40,26 @@
   "dependencies": {
     "@xterm/addon-serialize": "^0.12.0",
     "@xterm/xterm": "^5.4.0",
+    "clear-module": "^4.1.2",
     "consola": "^3.2.3",
+    "csv-parse": "^5.5.5",
+    "decompress": "^4.2.1",
     "events": "^3.3.0",
+    "fs-extra": "^11.2.0",
+    "glob": "^10.3.12",
+    "got-cjs": "^12.5.4",
+    "node-downloader-helper": "^2.1.9",
     "node-pty": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "semver": "^7.6.0",
+    "sudo-prompt": "^9.2.1",
     "systeminformation": "^5.22.7",
     "tslib": "^2.3.0",
-    "xterm-headless": "^5.3.0"
+    "wget-improved": "^3.4.0",
+    "winston": "^3.13.0",
+    "xterm-headless": "^5.3.0",
+    "yaml": "^2.4.1"
   },
   "nx": {
     "includedScripts": []
