--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@beaver/core": ["core/src/index.ts"],
+      "@beaver/interceptor": ["interceptor/src/index.ts"],
       "@beaver/shell-flow": ["shell-flow/src/index.ts"],
       "@beaver/types": ["types/src/index.ts"],
       "@beaver/utils": ["utils/src/index.ts"]
