--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "semver": "^7.6.0",
+    "shell-env": "^4.0.1",
     "sudo-prompt": "^9.2.1",
     "systeminformation": "^5.22.7",
     "tslib": "^2.3.0",
