feat: library 设计

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@beaver/arteffix-library": ["arteffix-library/src/index.ts"],
       "@beaver/core": ["core/src/index.ts"],
       "@beaver/interceptor": ["interceptor/src/index.ts"],
       "@beaver/shell-flow": ["shell-flow/src/index.ts"],
