--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/fake-useragent": "^1.0.0",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.4.0",
+    "@types/lodash": "^4.17.0",
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
@@ -66,6 +67,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-toast": "^1.1.5",
+    "@technically/lodash": "^4.17.0",
     "@xterm/addon-serialize": "^0.12.0",
     "@xterm/xterm": "^5.4.0",
     "ahooks": "^3.7.11",
@@ -79,10 +81,12 @@
     "dayjs": "^1.11.10",
     "decompress": "^4.2.1",
     "events": "^3.3.0",
+    "exifreader": "^4.22.1",
     "fs-extra": "^11.2.0",
     "glob": "^10.3.12",
     "got-cjs": "^12.5.4",
     "isomorphic-git": "^1.25.7",
+    "lodash": "^4.17.21",
     "next": "14.0.4",
     "node-downloader-helper": "^2.1.9",
     "node-pty": "^1.0.0",
