feat: 文件管理去掉分组

--- a/package.json
+++ b/package.json
@@ -82,9 +82,11 @@
     "decompress": "^4.2.1",
     "events": "^3.3.0",
     "exifreader": "^4.22.1",
+    "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "glob": "^10.3.12",
     "got-cjs": "^12.5.4",
+    "image-palette": "^2.1.0",
     "isomorphic-git": "^1.25.7",
     "lodash": "^4.17.21",
     "next": "14.0.4",
