--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@nx/cypress": "18.1.2",
     "@nx/eslint": "18.1.2",
@@ -14,7 +16,10 @@
     "@nx/next": "18.1.2",
     "@nx/node": "18.1.2",
     "@nx/react": "18.1.2",
+    "@nx/rollup": "18.1.2",
     "@nx/workspace": "18.1.2",
+    "@rollup/plugin-url": "^7.0.0",
+    "@svgr/rollup": "^8.0.1",
     "@swc-node/register": "~1.8.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
@@ -29,8 +34,10 @@
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
+    "@types/react-window": "^1.8.8",
     "@types/semver": "^7.5.8",
     "@types/store": "^2.0.5",
+    "@types/use-sync-external-store": "^0.0.6",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10.4.19",
