--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@beaver/arteffix-library": ["arteffix-library/src/index.ts"],
+      "@beaver/arteffix-utils": ["arteffix-utils/src/index.ts"],
       "@beaver/core": ["core/src/index.ts"],
       "@beaver/interceptor": ["interceptor/src/index.ts"],
       "@beaver/shell-flow": ["shell-flow/src/index.ts"],
