--- a/utils/package.json
+++ b/utils/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@beaver/utils",
   "version": "0.0.1",
-  "dependencies": {
-    "tslib": "^2.3.0"
-  },
   "type": "commonjs",
   "main": "./src/index.js",
-  "typings": "./src/index.d.ts"
+  "typings": "./src/index.d.ts",
+  "devDependencies": {
+    "@swc/helpers": "~0.5.2",
+    "tslib": "^2.3.0"
+  }
 }
