feat: 手动增加依赖

--- a/arteffix-library/project.json
+++ b/arteffix-library/project.json
@@ -5,13 +5,15 @@
   "projectType": "library",
   "targets": {
     "build": {
-      "executor": "@nx/js:tsc",
+      "executor": "@nx/rollup:rollup",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/arteffix-library",
         "main": "arteffix-library/src/index.ts",
         "tsConfig": "arteffix-library/tsconfig.lib.json",
-        "assets": ["arteffix-library/*.md"]
+//        "assets": ["arteffix-library/*.md"],
+        "project": "arteffix-library/package.json",
+        "format": ["esm", "cjs"]
       }
     },
     "nx-release-publish": {
