feat:"esModuleInterop": true

--- a/arteffix-utils/package.json
+++ b/arteffix-utils/package.json
@@ -2,8 +2,7 @@
   "name": "@beaver/arteffix-utils",
   "version": "0.0.1",
   "dependencies": {
-    "tslib": "^2.3.0",
-    "exifreader": "^4.22.1"
+    "tslib": "^2.3.0"
   },
   "main": "./src/index.js",
   "typings": "./src/index.d.ts"
