--- a/arteffix-library/package.json
+++ b/arteffix-library/package.json
@@ -2,9 +2,7 @@
   "name": "@beaver/arteffix-library",
   "version": "0.0.1",
   "dependencies": {
-    "tslib": "^2.3.0",
-    "fast-glob": "^3.3.2",
-    "rimraf": "^5.0.5"
+    "tslib": "^2.3.0"
   },
   "main": "./src/index.js",
   "typings": "./src/index.d.ts"
