--- a/arteffix-utils/package.json
+++ b/arteffix-utils/package.json
@@ -4,6 +4,9 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
+  "peerDependencies": {
+    "exifreader": "^4.22.1"
+  },
   "main": "./src/index.js",
   "typings": "./src/index.d.ts"
 }
