--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@types/decompress": "^4.2.7",
     "@types/fake-useragent": "^1.0.0",
     "@types/fs-extra": "^11.0.4",
+    "@types/is-base64": "^1.1.3",
     "@types/jest": "^29.4.0",
+    "@types/jquery": "^3.5.29",
     "@types/lodash": "^4.17.0",
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
@@ -93,7 +95,9 @@
     "glob": "^10.3.12",
     "got-cjs": "^12.5.4",
     "image-palette": "^2.1.0",
+    "is-base64": "^1.1.0",
     "isomorphic-git": "^1.25.7",
+    "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "next": "14.0.4",
     "node-downloader-helper": "^2.1.9",
