--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "shadcn-ui": "^0.8.0",
     "shell-env": "^4.0.1",
     "shell-path": "^3.0.0",
+    "srcset-parse": "^1.1.0",
     "store": "^2.0.12",
     "sudo-prompt": "^9.2.1",
     "systeminformation": "^5.22.7",
