--- a/arteffix-extension/package.json
+++ b/arteffix-extension/package.json
@@ -4,7 +4,8 @@
   "dependencies": {},
   "peerDependencies": {
     "jquery": "^3.7.1",
-    "is-base64": "^1.1.0"
+    "is-base64": "^1.1.0",
+    "srcset-parse": "^1.1.0"
   },
   "main": "./index.cjs",
   "module": "./index.js"
