--- a/arteffix-library/package.json
+++ b/arteffix-library/package.json
@@ -1,9 +1,7 @@
 {
   "name": "@beaver/arteffix-library",
   "version": "0.0.1",
-  "dependencies": {
-    "tslib": "^2.3.0"
-  },
+  "dependencies": {},
   "main": "./src/index.js",
   "typings": "./src/index.d.ts"
 }
