--- a/beaver-kernel/package.json
+++ b/beaver-kernel/package.json
@@ -3,5 +3,5 @@
   "version": "0.0.1",
   "dependencies": {},
   "main": "./index.cjs",
-  "module": "./index.js"
+  "typings": "./src/index.d.ts"
 }
