--- a/download/package.json
+++ b/download/package.json
@@ -1,4 +1,6 @@
 {
   "name": "@beaver/download",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "main": "./index.cjs",
+  "typings": "./src/index.d.ts"
 }
