--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nx/react": "18.1.2",
     "@nx/rollup": "18.2.1",
     "@nx/workspace": "18.1.2",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-url": "^7.0.0",
     "@svgr/rollup": "^8.0.1",
     "@swc-node/register": "~1.8.0",
