--- a/arteffix-library/package.json
+++ b/arteffix-library/package.json
@@ -2,5 +2,9 @@
   "name": "@beaver/arteffix-library",
   "version": "0.0.1",
   "main": "./src/index.js",
-  "typings": "./src/index.d.ts"
+  "typings": "./src/index.d.ts",
+  "peerDependencies": {
+    "fs-extra": "^11.2.0",
+    "fast-glob": "^3.3.2"
+  }
 }
