--- a/arteffix-extension/package.json
+++ b/arteffix-extension/package.json
@@ -4,7 +4,8 @@
   "peerDependencies": {
     "jquery": "^3.7.1",
     "is-base64": "^1.1.0",
-    "srcset-parse": "^1.1.0"
+    "srcset-parse": "^1.1.0",
+    "mime": "^4.0.3"
   },
   "main": "./index.cjs",
   "module": "./index.js"
