--- a/shell-flow/package.json
+++ b/shell-flow/package.json
@@ -1,12 +1,6 @@
 {
   "name": "@beaver/shell-flow",
   "version": "0.0.1",
-  "dependencies": {
-    "@swc/helpers": "~0.5.2",
-    "tslib": "^2.3.0"
-  },
-  "type": "commonjs",
-  "main": "./src/index.js",
-  "typings": "./src/index.d.ts",
-  "devDependencies": {}
+  "main": "./index.cjs",
+  "typings": "./src/index.d.ts"
 }
