--- a/shell-flow/package.json
+++ b/shell-flow/package.json
@@ -2,5 +2,20 @@
   "name": "@beaver/shell-flow",
   "version": "0.0.1",
   "main": "./index.cjs",
-  "typings": "./src/index.d.ts"
+  "typings": "./src/index.d.ts",
+  "peerDependencies": {
+    "winston": "^3.13.0",
+    "core-js": "^3.37.1",
+    "fs-extra": "^11.2.0",
+    "isomorphic-git": "^1.25.10",
+    "systeminformation": "^5.22.9",
+    "node-pty": "^1.0.0",
+    "shell-env": "^4.0.1",
+    "sudo-prompt": "^9.2.1",
+    "node-downloader-helper": "^2.1.9",
+    "pdrive": "^0.0.23",
+    "rimraf": "^5.0.7",
+    "decompress": "^4.2.1",
+    "glob": "^10.3.15"
+  }
 }
