--- a/shell-flow/package.json
+++ b/shell-flow/package.json
@@ -1,8 +1,6 @@
 {
   "name": "@beaver/shell-flow",
   "version": "0.0.1",
-  "main": "./index.cjs",
-  "typings": "./src/index.d.ts",
   "peerDependencies": {
     "winston": "^3.13.0",
     "core-js": "^3.37.1",
@@ -16,6 +14,7 @@
     "pdrive": "^0.0.23",
     "rimraf": "^5.0.7",
     "decompress": "^4.2.1",
-    "glob": "^10.3.15"
+    "glob": "^10.3.15",
+    "events": "^3.3.0"
   }
 }
