feat: 更改版本号

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
+registry=https://packages.aliyun.com/634d7ee774d6ec11116be100/npm/npm-registry/
+//packages.aliyun.com/634d7ee774d6ec11116be100/npm/npm-registry/:_authToken=72cc24d8-f76b-403d-b2d1-dd5b5f44d53a
+
 strict-peer-dependencies=false
 auto-install-peers=true
