--- a/package.json
+++ b/package.json
@@ -8,46 +8,45 @@
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@nx/cypress": "18.1.2",
-    "@nx/eslint": "18.1.2",
-    "@nx/eslint-plugin": "18.1.2",
-    "@nx/jest": "18.2.1",
-    "@nx/js": "18.2.1",
-    "@nx/next": "18.1.2",
-    "@nx/node": "18.1.2",
-    "@nx/react": "18.1.2",
-    "@nx/rollup": "18.2.1",
-    "@nx/workspace": "18.1.2",
+    "@nx/cypress": "19.1.1",
+    "@nx/eslint": "19.1.1",
+    "@nx/eslint-plugin": "19.1.1",
+    "@nx/jest": "19.1.1",
+    "@nx/js": "19.1.1",
+    "@nx/next": "19.1.1",
+    "@nx/node": "19.1.1",
+    "@nx/react": "19.1.1",
+    "@nx/rollup": "19.1.1",
+    "@nx/workspace": "19.1.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-url": "^7.0.0",
-    "@svgr/rollup": "^8.0.1",
+    "@rollup/plugin-url": "8.0.2",
+    "@svgr/rollup": "8.1.0",
     "@swc-node/register": "~1.8.0",
-    "@swc/cli": "~0.1.62",
+    "@swc/cli": "0.3.12",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@swc/jest": "0.2.20",
-    "@testing-library/react": "14.0.0",
+    "@testing-library/react": "15.0.6",
     "@types/decompress": "^4.2.7",
     "@types/fake-useragent": "^1.0.0",
     "@types/fs-extra": "^11.0.4",
     "@types/is-base64": "^1.1.3",
     "@types/jest": "^29.4.0",
     "@types/jquery": "^3.5.29",
-    "@types/lodash": "^4.17.0",
     "@types/node": "18.16.9",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@types/react-window": "^1.8.8",
     "@types/semver": "^7.5.8",
     "@types/store": "^2.0.5",
     "@types/use-sync-external-store": "^0.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@typescript-eslint/eslint-plugin": "7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
     "autoprefixer": "^10.4.19",
     "babel-jest": "^29.4.1",
-    "cypress": "^13.6.6",
-    "eslint": "~8.48.0",
-    "eslint-config-next": "14.0.4",
+    "cypress": "13.10.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
@@ -61,12 +60,12 @@
     "nextjs-node-loader": "^1.1.5",
     "nextjs-obfuscator": "^3.0.0",
     "node-loader": "^2.0.0",
-    "nx": "18.1.2",
+    "nx": "19.1.1",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.13",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
@@ -99,15 +98,14 @@
     "is-base64": "^1.1.0",
     "isomorphic-git": "^1.25.7",
     "jquery": "^3.7.1",
-    "lodash": "^4.17.21",
     "mime": "^4.0.3",
-    "next": "14.0.4",
+    "next": "14.2.3",
     "node-downloader-helper": "^2.1.9",
     "node-pty": "^1.0.0",
     "osx-temperature-sensor": "^1.0.8",
     "pdrive": "^0.0.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "rimraf": "^5.0.5",
