--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "shell-env": "^4.0.1",
     "srcset-parse": "^1.1.0",
     "store": "^2.0.12",
+    "strip-ansi": "^7.1.0",
     "sudo-prompt": "^9.2.1",
     "systeminformation": "^5.22.7",
     "tailwind-merge": "^2.2.2",
