--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-url": "8.0.2",
     "@svgr/rollup": "8.1.0",
-    "@swc-node/register": "~1.8.0",
+    "@swc-node/register": "~1.9.1",
     "@swc/cli": "0.3.12",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
     "@swc/jest": "0.2.20",
     "@testing-library/react": "15.0.6",
     "@types/decompress": "^4.2.7",
@@ -43,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "7.11.0",
     "@typescript-eslint/parser": "7.11.0",
     "autoprefixer": "^10.4.19",
+    "ava": "^6.1.3",
     "babel-jest": "^29.4.1",
     "cypress": "13.10.0",
     "eslint": "8.57.0",
