--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.14.5",
+    "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.14.5",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@nx/cypress": "19.1.1",
@@ -43,7 +44,6 @@
     "@typescript-eslint/eslint-plugin": "7.11.0",
     "@typescript-eslint/parser": "7.11.0",
     "autoprefixer": "^10.4.19",
-    "ava": "^6.1.3",
     "babel-jest": "^29.4.1",
     "cypress": "13.10.0",
     "eslint": "8.57.0",
@@ -67,6 +67,7 @@
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "3.4.3",
+    "ts-babel": "^6.1.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
