--- a/package.json
+++ b/package.json
@@ -103,7 +103,6 @@
     "mime": "^4.0.3",
     "next": "14.2.3",
     "node-downloader-helper": "^2.1.9",
-    "node-pty": "^1.0.0",
     "osx-temperature-sensor": "^1.0.8",
     "pdrive": "^0.0.23",
     "react": "18.3.1",
@@ -118,6 +117,7 @@
     "store": "^2.0.12",
     "strip-ansi": "^7.1.0",
     "sudo-prompt": "^9.2.1",
+    "sudo-prompt-programfiles-x86": "^9.2.8",
     "systeminformation": "^5.22.7",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
