--- a/package.json
+++ b/package.json
@@ -10,18 +10,26 @@
     "@babel/preset-react": "^7.14.5",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@nx/cypress": "19.1.1",
+    "@nx/devkit": "19.1.1",
     "@nx/eslint": "19.1.1",
     "@nx/eslint-plugin": "19.1.1",
+    "@nx/express": "^19.1.1",
     "@nx/jest": "19.1.1",
     "@nx/js": "19.1.1",
     "@nx/next": "19.1.1",
     "@nx/node": "19.1.1",
+    "@nx/playwright": "19.1.1",
     "@nx/react": "19.1.1",
     "@nx/rollup": "19.1.1",
+    "@nx/web": "19.1.1",
+    "@nx/webpack": "19.1.1",
     "@nx/workspace": "19.1.1",
+    "@playwright/test": "^1.36.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-url": "8.0.2",
     "@svgr/rollup": "8.1.0",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "0.3.12",
     "@swc/core": "~1.5.7",
@@ -29,6 +37,7 @@
     "@swc/jest": "0.2.20",
     "@testing-library/react": "15.0.6",
     "@types/decompress": "^4.2.7",
+    "@types/express": "github:types/express",
     "@types/fake-useragent": "^1.0.0",
     "@types/fs-extra": "^11.0.4",
     "@types/is-base64": "^1.1.3",
@@ -52,6 +61,7 @@
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "javascript-obfuscator": "^4.1.0",
@@ -66,21 +76,29 @@
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.13",
+    "react-refresh": "^0.10.0",
     "tailwindcss": "3.4.3",
     "ts-babel": "^6.1.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
-    "verdaccio": "^5.0.4"
+    "verdaccio": "^5.0.4",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-toast": "^1.1.5",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-ligatures": "^0.9.0",
+    "@xterm/addon-search": "^0.15.0",
     "@xterm/addon-serialize": "^0.12.0",
+    "@xterm/addon-unicode11": "^0.8.0",
+    "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.4.0",
     "ahooks": "^3.7.11",
+    "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "class-variance-authority": "^0.7.0",
@@ -92,6 +110,7 @@
     "decompress": "^4.2.1",
     "events": "^3.3.0",
     "exifreader": "^4.22.1",
+    "express": "^4.18.1",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "glob": "^10.3.12",
@@ -103,6 +122,7 @@
     "mime": "^4.0.3",
     "next": "14.2.3",
     "node-downloader-helper": "^2.1.9",
+    "node-pty": "^1.0.0",
     "osx-temperature-sensor": "^1.0.8",
     "pdrive": "^0.0.23",
     "react": "18.3.1",
@@ -113,6 +133,8 @@
     "semver": "^7.6.0",
     "shadcn-ui": "^0.8.0",
     "shell-env": "^4.0.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "srcset-parse": "^1.1.0",
     "store": "^2.0.12",
     "strip-ansi": "^7.1.0",
