--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/is-base64": "^1.1.3",
     "@types/jest": "^29.4.0",
     "@types/jquery": "^3.5.29",
+    "@types/json-templates": "^3.0.3",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
@@ -119,6 +120,7 @@
     "is-base64": "^1.1.0",
     "isomorphic-git": "^1.25.7",
     "jquery": "^3.7.1",
+    "json-templates": "^5.1.0",
     "mime": "^4.0.3",
     "next": "14.2.3",
     "node-downloader-helper": "^2.1.9",
