--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,14 +18,17 @@
       "@beaver/action-core": ["action-core/src/index.ts"],
       "@beaver/action-download": ["action-download/src/index.ts"],
       "@beaver/action-exec": ["action-exec/src/index.ts"],
+      "@beaver/action-fs": ["action-fs/src/index.ts"],
       "@beaver/action-io": ["action-io/src/index.ts"],
       "@beaver/action-parse": ["action-parse/src/index.ts"],
+      "@beaver/action-shell": ["action-shell/src/index.ts"],
       "@beaver/arteffix-extension": ["arteffix-extension/src/index.ts"],
       "@beaver/arteffix-library": ["arteffix-library/src/index.ts"],
       "@beaver/arteffix-utils": ["arteffix-utils/src/index.ts"],
       "@beaver/download": ["download/src/index.ts"],
       "@beaver/interceptor": ["interceptor/src/index.ts"],
       "@beaver/kernel": ["beaver-kernel/src/index.ts"],
+      "@beaver/shell-conda": ["shell-conda/src/index.ts"],
       "@beaver/shell-flow": ["shell-flow/src/index.ts"],
       "@beaver/system-info": ["system-info/src/index.ts"],
       "@beaver/types": ["types/src/index.ts"]
