--- a/beaver-kernel/package.json
+++ b/beaver-kernel/package.json
@@ -1,7 +1,4 @@
 {
   "name": "@beaver/kernel",
-  "version": "0.0.3",
-  "dependencies": {},
-  "main": "./index.cjs",
-  "typings": "./src/index.d.ts"
+  "version": "0.0.4"
 }
