feat: 支持批量收藏

--- a/action-parse/src/data/environment.yaml
+++ b/action-parse/src/data/environment.yaml
@@ -30,7 +30,7 @@ jobs:
           path: bin
       - name: conda install for unix
         if: os.platform === 'linux' || os.platform === 'darwin'
-        run: "base installer.sh -b -p {{bin}} miniconda {{absPath('/bin/miniconda')}}"
+        run: "base installer.sh -b -p installer.exe miniconda {{absPath('/bin/miniconda')}}"
         with:
           path: bin
       - name: conda config
