--- a/package.json
+++ b/package.json
@@ -2,12 +2,23 @@
   "name": "@beaver/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky",
+    "commit": "git add . && git-cz",
+    "lint-staged": "lint-staged"
+  },
   "private": true,
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git"
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.14.5",
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@nx/cypress": "19.1.1",
     "@nx/devkit": "19.1.1",
@@ -55,7 +66,9 @@
     "@typescript-eslint/parser": "7.11.0",
     "autoprefixer": "^10.4.19",
     "babel-jest": "^29.4.1",
+    "commitizen": "^4.3.0",
     "cypress": "13.10.0",
+    "cz-git": "^1.9.4",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.0.0",
@@ -65,10 +78,12 @@
     "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^9.1.5",
     "javascript-obfuscator": "^4.1.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "lint-staged": "^15.2.9",
     "nextjs-node-loader": "^1.1.5",
     "nextjs-obfuscator": "^3.0.0",
     "node-loader": "^2.0.0",
